--- a/index.html
+++ b/index.html
@@ -22,67 +22,48 @@
 
         <!-- BAGIAN SIDEBAR -->
 
-        <div class="sidebar">
-            <div class="text-center mb-3 mt-4">
-                <img src="img/Logo CN.png" alt="" style="max-width: 100px; max-height: 100px;">
+        <nav class="sidebar">
+            <div class="side_header py-3">
+                <div class="text-center">
+                    <img src="../img/Logo CN.png" alt="" class="">
+                </div>
+                <div class="judul">
+                    <p>SMK CITRA NEGARA</p>
+                </div>
             </div>
-            <hr class="garis mx-3 mt-4">
 
 
             <!--INI LIST MENU SIDEBAR  -->
-            <ul class="list-unstyled px-1 ">
 
-                <div class="d-flex" id="menu">
-                    <div class="container py-2">
-                        <div class="row">
-                            <li class=""><a href="../home.html" class="text-decoration-none"><i
-                                        class="bi bi-house-fill ms-3 me-5 fs-5"></i>Home</a></li>
-                        </div>
-                    </div>
-                </div>
+            <ul class="list-unstyled text-decoration-none">
+                <a href="../home.html">
+                    <li class="text">
+                        Home
+                    </li>
+                </a>
 
-                <div class="d-flex pt-2" id="menu">
-                    <div class="container py-2">
-                        <div class="row">
-                            <li><a href="acara.html" class="text-decoration-none"><i
-                                        class="bi bi-clock-fill ms-3 me-5 fs-5"></i>Acara</a>
-                            </li>
-                        </div>
-                    </div>
-                </div>
+                <a href="../acara/acara.html">
+                    <li class="">
+                        Acara
+                    </li>
+                </a>
 
-                <div class="d-flex pt-2" id="menu">
-                    <div class="container py-2">
-                        <div class="row">
-                            <li><a href="" class="text-decoration-none"><i
-                                        class="bi bi-clipboard-fill ms-3 me-5 fs-5"></i>Tamu</a>
-                            </li>
-                        </div>
-                    </div>
-                </div>
+                <a href="">
+                    <li class="">
+                        Tamu
+                    </li>
 
-                <div class="d-flex pt-2" id="menu">
-                    <div class="container py-2">
-                        <li><a href="" class="text-decoration-none"><i
-                                    class="bi bi-person-fill ms-3 me-5 fs-5"></i></i>Users</a>
+                <a href="">
+                        <li class="">
+                            Users
                         </li>
+                </a>
 
-                    </div>
+                
+                <div class="logout container-fluid">
+                    <a href="" class="btn btn-danger btn-block d-grid gap-2"  data-bs-toggle="modal" data-bs-target="#logoutModal">Logout</a>
                 </div>
-
-                <hr class="garis2 mx-3">
-                <div class="d-flex pt-2" id="menu">
-                    <div class="container py-2">
-                        <div class="row">
-                            <li><a href="../index.html" class="text-decoration-none"><i
-                                        class="bi bi-door-open-fill ms-3 me-5 py-3 fs-5"></i></i>Log Out</a>
-                            </li>
-
-                        </div>
-                    </div>
-                </div>
-            </ul>
-        </div>
+        </nav>
 
 
         <!-- TUTUP SIDEBAR -->
